services/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    app: registry
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
